# Roastify_me

./: app.py  compliment_bank.py  compliment_engine.py  roast_engine.py  roast_log.txt  roaster_log.txt
college_project_sentiment_analysis/: pyproject.toml  readme.txt  roast_bank.py  roast_log.txt
