[project]
name = "college-project-sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "gtts (>=2.5.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "college_project_sentiment_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
